# langflow-ai

./: .env  README.md  opensearch_install_guide.md  run_langflow.bat
example_data/: combined_data.json  combined_qa.txt
example_data - Copy/: company_policies.txt  customer_service_guidelines.txt
hand-on_1/: hands-on1.md  langflow-docker-install.md  ข้อมูลเพิ่มเติม.txt
hand-on_2-1/: README_TH.md  example_question.txt  hands-on2-1.md
hand-on_2-2/: README_TH.md  hands-on2-2.md
hand-on_2-2/data/: ai_ethics.txt  llm_technology.txt  questions.txt
hand-on_2-3/: README.md  README_TH.md  README_TH.md.ori  example_question.txt  hands-on2-3.md  langflow_rag_guide.md  prompt.txt  questions.txt  simple_agent_explanation.md
langflow_docker/: .dockerignore  Dockerfile  Dockerfile.simple  QUICKSTART.md  README-EASY.md  check-port.bat  cleanup-and-start.bat  cleanup-networks.bat  cleanup.bat  clear-cache.bat  compose-start.bat  debug.bat  diagnose.bat  docker-compose.yml  fix-and-start.bat  fix-database.bat  fix-permissions.bat  fix-port.bat  fix-sse.bat  fresh-start.bat  help.bat  langflow.bat  migrate-db.bat  pyproject.toml  quick-start.bat  setup.bat  setup.sh  simple-langflow.bat  start-fixed.bat  start.bat  status.bat  stop.bat
langflow_docker.ori/: Dockerfile  README.md  docker-compose.yml
langflow_docker/flows/: README.json
langflow_docker/init-scripts/: 01-init-langflow.sh
langflow_docker/nginx/: nginx.conf
langflow_linux_install/: langflow-linux_install.md
mcp-filesystem_install/: mcp-filesystem-readme.md
miniconda_install/: README.md
opensearch_docker/: readme.txt
workshop_1/: example_question.txt  readme.md
workshop_2/: README.md  example_question.txt
workshop_3/: README.md  example_question.txt  mydatabase.db
workshop_4/: README.md
workshop_solutions/: customer-inquiries.csv  workshop_solution.rar
(+25 files in other folders)
