[project]
name = "langflow-app"
version = "1.0.0"
description = "Langflow application with uv package manager"
authors = [
    {name = "Langflow Team", email = "admin@langflow.org"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"

dependencies = [
    "langflow>=1.1.0",
    "uvicorn[standard]>=0.23.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.7",
    "redis>=4.6.0",
    "celery>=5.3.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

extra = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
]

[project.urls]
Homepage = "https://langflow.org"
Repository = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
